k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"backend","namespace":"local"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"backend"}},"template":{"metadata":{"labels":{"app":"backend"}},"spec":{"containers":[{"env":[{"name":"API_URL","value":"http://localhost:5000"},{"name":"DB_HOST","valueFrom":{"configMapKeyRef":{"key":"MYSQL_HOST","name":"mysql-config"}}},{"name":"DB_NAME","valueFrom":{"configMapKeyRef":{"key":"MYSQL_DATABASE","name":"mysql-con [...]
  creationTimestamp: "2025-08-16T00:15:16Z"
  generation: 1
  name: backend
  namespace: local
  resourceVersion: "135400"
  uid: 71a9aa89-de5b-4642-b4ca-b8df3ae71578
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: backend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: backend
    spec:
      containers:
      - env:
        - name: API_URL
          value: http://localhost:5000
        - name: DB_HOST
          valueFrom:
            configMapKeyRef:
              key: MYSQL_HOST
              name: mysql-config
        - name: DB_NAME
          valueFrom:
            configMapKeyRef:
              key: MYSQL_DATABASE
              name: mysql-config
        - name: DB_USER
          valueFrom:
            configMapKeyRef:
              key: MYSQL_USER
              name: mysql-config
        - name: DB_PASSWORD
          valueFrom:
            configMapKeyRef:
              key: MYSQL_PASSWORD
              name: mysql-config
        image: multi-app-project-python-app:dev
        imagePullPolicy: IfNotPresent
        name: backend
        ports:
        - containerPort: 5000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /app/uploads
          name: pdf-storage
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: pdf-storage
        persistentVolumeClaim:
          claimName: backend-pdf-pvc
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2025-08-16T00:15:26Z"
    lastUpdateTime: "2025-08-16T00:15:26Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2025-08-16T00:15:16Z"
    lastUpdateTime: "2025-08-16T00:15:26Z"
    message: ReplicaSet "backend-57497d58c7" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
