k8s/full-dev.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
---
apiVersion: v1
kind: Service
metadata:
  name: dev-backend
  namespace: dev
spec:
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: backend
---
apiVersion: v1
kind: Service
metadata:
  name: dev-frontend
  namespace: dev
spec:
  ports:
  - nodePort: 30036
    port: 3000
    targetPort: 3000
  selector:
    app: frontend
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: dev-mysql
  namespace: dev
spec:
  ports:
    port: 3306
  selector:
    app: mysql
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-backend
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - env:
        - name: DB_HOST
          value: mysql
        - name: DB_NAME
          valueFrom:
            configMapKeyRef:
              key: MYSQL_DATABASE
              name: dev-mysql-config
        - name: DB_USER
          valueFrom:
            configMapKeyRef:
              key: MYSQL_USER
              name: dev-mysql-config
        - name: DB_PASSWORD
          valueFrom:
            configMapKeyRef:
              key: MYSQL_PASSWORD
              name: dev-mysql-config
        image: multi-app-project-python-app:dev
        name: backend
        ports:
        - containerPort: 5000
        volumeMounts:
        - mountPath: /app/uploads
          name: pdf-storage
      volumes:
      - name: pdf-storage
        persistentVolumeClaim:
          claimName: backend-pdf-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-frontend
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - image: multi-app-project-react-app:dev
        name: frontend
        ports:
        - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-mysql
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: dev-mysql-config
        image: multi-app-project-mysql-db:latest
        name: mysql
        ports:
        - containerPort: 3306
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: mysql-data
      volumes:
      - name: mysql-data
        persistentVolumeClaim:
          claimName: dev-mysql-pvc
